fixed shop scaling issue on small screens

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,4 +1,7 @@
 .cart-dropdown-container {
+  width: 260px;
+  height: 300px;
+
   @media (min-width: 700px) {
     width: 280px;
     height: 320px;
